# colorswap

./: Cargo.toml  README.md  colorswap.py  pyproject.toml
colorswap/: __init__.py
src/: main.rs
